[package]
name = "raydium-eco-farms"
version = "0.0.1"
edition = "2021"

[lib]
name = "raydium_eco_farms"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.1"
prost = "0.13.3"
prost-types = "0.13.3"
sologger_log_context = "0.2.2"
substreams = "0.6.0"
substreams-solana = "0.14.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
