[package]
name = "raydium-eco-farms"
version = "0.0.1"
edition = "2021"

[lib]
name = "raydium_eco_farms"
crate-type = ["lib", "cdylib"]

[dependencies]
bs58 = "0.5.1"
prost = "0.11"
prost-types = "0.11"
substreams = "0.5.0"
substreams-solana = "0.13.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
